docs: 添加JDK观察者模式实现文档

--- a/src/main/java/com/demo/observer/观察者模式学习笔记.md
+++ b/src/main/java/com/demo/observer/观察者模式学习笔记.md
@@ -132,8 +132,80 @@ public void update(Product product) {
 - **股票监控**：价格变动通知
 - **天气预报**：天气变化推送
 
+## ☕ JDK中提供的实现
+
+在 Java 中，通过 `java.util.Observable` 类和 `java.util.Observer` 接口定义了观察者模式，只要实现它们的子类就可以编写观察者模式实例。
+
+### 1. Observable类
+
+`Observable` 类是抽象目标类（被观察者），它有一个 `Vector` 集合成员变量，用于保存所有要通知的观察者对象，下面来介绍它最重要的 3 个方法。
+
+- **`void addObserver(Observer o)`** 方法：用于将新的观察者对象添加到集合中。
+
+- **`void notifyObservers(Object arg)`** 方法：调用集合中的所有观察者对象的 `update`方法，通知它们数据发生改变。通常越晚加入集合的观察者越先得到通知。
+
+- **`void setChange()`** 方法：用来设置一个 `boolean` 类型的内部标志，注明目标对象发生了变化。当它为 `true` 时，`notifyObservers()` 才会通知观察者。
+
+### 2. Observer 接口
+
+`Observer` 接口是抽象观察者，它监视目标对象的变化，当目标对象发生变化时，观察者得到通知，并调用 `update` 方法，进行相应的工作。
+
+**接口方法**：
+```java
+void update(Observable o, Object arg)
+```
+
+### 3. 使用示例对比
+
+**我们自己实现的模式**：
+```java
+// 主题接口
+public interface IProduct {
+    void attach(IMember member);
+    void detach(IMember member);
+    void notifyObservers();
+}
+
+// 观察者接口
+public interface IMember {
+    void update(Product product);
+}
+```
+
+**JDK实现的模式**：
+```java
+// JDK已提供Observable类（被观察者）
+public class MySubject extends Observable {
+    public void changeState() {
+        setChanged();           // 标记状态已改变
+        notifyObservers();      // 通知观察者
+    }
+}
+
+// JDK已提供Observer接口
+public class MyObserver implements Observer {
+    @Override
+    public void update(Observable o, Object arg) {
+        // 处理通知
+    }
+}
+```
+
+### 4. JDK实现的优势
+
+1. **标准化**：提供了统一的观察者模式实现
+2. **线程安全**：`Vector` 集合是线程安全的
+3. **状态控制**：通过 `setChanged()` 控制通知时机
+4. **参数传递**：`notifyObservers(Object arg)` 可以传递额外参数
+
+### 5. 注意事项
+
+⚠️ **JDK 9+ 已弃用**：`java.util.Observable` 和 `java.util.Observer` 从 Java 9 开始被标记为 `@Deprecated`，建议使用 `java.beans.PropertyChangeSupport` 或第三方框架（如 Guava 的 EventBus）。
+
 ## 📝 个人总结
 
 观察者模式的核心就是：**主题维护观察者列表，状态变化时通知所有观察者，观察者在update方法中做出响应**。
 
 这个模式的关键在于理解`notifyObservers()`方法如何遍历观察者列表并调用每个观察者的`update()`方法，这就是整个模式的核心骨架。
+
+无论是我们自己实现还是使用JDK提供的实现，核心思想都是一样的：**一对多的依赖关系，状态变化自动通知**。
